--- a/ObjcProject/Base.lproj/Main.storyboard
+++ b/ObjcProject/Base.lproj/Main.storyboard
@@ -15,34 +15,66 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="126" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8RO-hF-BMI">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="128" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8RO-hF-BMI">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="elp-n8-qFc">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="126"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="128"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="elp-n8-qFc" id="hN7-hS-1z5">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="126"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K1f-QI-Kcz">
-                                                    <rect key="frame" x="0.0" y="-1" width="66" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K1f-QI-Kcz">
+                                                    <rect key="frame" x="15" y="0.0" width="79" height="118"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfm-lf-g2D">
+                                                    <rect key="frame" x="104" y="11" width="309" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlX-jO-NuX">
+                                                    <rect key="frame" x="104" y="38" width="309" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-yQ-c2f">
+                                                    <rect key="frame" x="104" y="95" width="52.5" height="22"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xbd-CJ-Aek">
+                                                            <rect key="frame" x="0.0" y="0.0" width="16.5" height="22"/>
+                                                            <state key="normal" image="Star-Icon"/>
+                                                        </button>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4C-ze-0kE">
+                                                            <rect key="frame" x="21.5" y="0.0" width="31" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vfm-lf-g2D" firstAttribute="top" secondItem="hN7-hS-1z5" secondAttribute="top" constant="11" id="9wf-Jr-LEu"/>
+                                                <constraint firstItem="vfm-lf-g2D" firstAttribute="leading" secondItem="K1f-QI-Kcz" secondAttribute="trailing" constant="10" id="ADO-5u-jBk"/>
+                                                <constraint firstAttribute="bottom" secondItem="K1f-QI-Kcz" secondAttribute="bottom" constant="10" id="Ec4-5N-Ix9"/>
+                                                <constraint firstItem="8zm-yQ-c2f" firstAttribute="bottom" secondItem="hN7-hS-1z5" secondAttribute="bottomMargin" id="KC5-tt-7If"/>
+                                                <constraint firstItem="8zm-yQ-c2f" firstAttribute="leading" secondItem="K1f-QI-Kcz" secondAttribute="trailing" constant="10" id="OMI-5o-J1F"/>
+                                                <constraint firstItem="SlX-jO-NuX" firstAttribute="leading" secondItem="K1f-QI-Kcz" secondAttribute="trailing" constant="10" id="WSr-jo-fn8"/>
+                                                <constraint firstItem="SlX-jO-NuX" firstAttribute="top" secondItem="vfm-lf-g2D" secondAttribute="bottom" constant="10" id="icN-nJ-XWJ"/>
+                                                <constraint firstItem="K1f-QI-Kcz" firstAttribute="leading" secondItem="hN7-hS-1z5" secondAttribute="leading" constant="15" id="nJW-Io-lIP"/>
+                                                <constraint firstItem="K1f-QI-Kcz" firstAttribute="top" secondItem="hN7-hS-1z5" secondAttribute="top" id="pLW-IA-DRz"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="8RO-hF-BMI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="BTh-De-pB7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8RO-hF-BMI" secondAttribute="trailing" id="Cra-8g-uG9"/>
-                            <constraint firstItem="8RO-hF-BMI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Rcy-Cv-lUb"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8RO-hF-BMI" secondAttribute="bottom" id="bZV-cw-a4d"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="WsD-F8-Lkv"/>
@@ -70,4 +102,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="120.53571428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Star-Icon" width="16.5" height="16.5"/>
+    </resources>
 </document>
